--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
       <artifactId>protostuff-runtime</artifactId>
       <version>1.0.8</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>seckill</finalName>
