--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/seckill?useUnicode=true&characterEncoding=utf8
-user=root
+url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf8
+user=seckill_user
 password=root
